--- a/example/javaee/pom.xml
+++ b/example/javaee/pom.xml
@@ -4,49 +4,47 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Axon Framework Java EE Example</name>
+    <parent>
+        <groupId>org.axonframework.extensions.cdi</groupId>
+        <artifactId>axon-extension-cdi-parent</artifactId>
+        <version>4.5-SNAPSHOT</version>
+        <relativePath>../../extension-cdi-parent</relativePath>
+    </parent>
+
+
     <groupId>org.axonframework</groupId>
     <artifactId>javaee-axon-example</artifactId>
-    <version>3.3-alpha2-SNAPSHOT</version>
     <packaging>war</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <javaee-api.version>7.0</javaee-api.version>
-        <axon.version>3.3.5</axon.version>
-        <axon-cdi.version>3.3-alpha2-SNAPSHOT</axon-cdi.version>
-        <junit.version>4.12</junit.version>
-    </properties>
+
+    <name>Axon Framework :: CDI Extension :: Java EE Example</name>
 
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>${javaee-api.version}</version>
-            <scope>provided</scope>
+            <groupId>org.axonframework.extensions.cdi</groupId>
+            <artifactId>axon-cdi</artifactId>
         </dependency>
         <dependency>
             <groupId>org.axonframework</groupId>
-            <artifactId>axon-cdi</artifactId>
-            <version>${axon-cdi.version}</version>
+            <artifactId>axon-configuration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.9.8</version>
         </dependency>
 
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-test</artifactId>
-            <version>${axon.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -135,7 +133,7 @@
                             <container>
                                 <containerId>tomee7x</containerId>
                                 <zipUrlInstaller>
-                                    <url>http://repo.maven.apache.org/maven2/org/apache/tomee/apache-tomee/7.0.5/apache-tomee-7.0.5-webprofile.zip</url>
+                                    <url>https://repo.maven.apache.org/maven2/org/apache/tomee/apache-tomee/7.0.5/apache-tomee-7.0.5-webprofile.zip</url>
                                 </zipUrlInstaller>
                             </container>
                         </configuration>
