--- a/example/javase/pom.xml
+++ b/example/javase/pom.xml
@@ -4,30 +4,31 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Axon Framework CDI in Java SE Example</name>
-    <groupId>org.axonframework</groupId>
-    <artifactId>cdi-javase-axon-example</artifactId>
-    <version>3.3-alpha2-SNAPSHOT</version>
+    <parent>
+        <groupId>org.axonframework.extensions.cdi</groupId>
+        <artifactId>axon-extension-cdi-parent</artifactId>
+        <version>4.5-SNAPSHOT</version>
+        <relativePath>../../extension-cdi-parent</relativePath>
+    </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <axon.version>3.3.6</axon.version>
-        <axon-cdi.version>3.3-alpha2-SNAPSHOT</axon-cdi.version>
-        <weld.version>3.0.5.Final</weld.version>
-        <junit.version>4.12</junit.version>
-    </properties>
+    <groupId>org.axonframework</groupId>
+    <artifactId>javase-axon-example</artifactId>
+
+    <name>Axon Framework :: CDI Extension :: Java SE Example</name>
+
 
     <dependencies>
         <dependency>
             <groupId>org.axonframework</groupId>
+            <artifactId>axon-configuration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.axonframework.extensions.cdi</groupId>
             <artifactId>axon-cdi</artifactId>
-            <version>${axon-cdi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
-            <version>${weld.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -39,13 +40,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-test</artifactId>
-            <version>${axon.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -62,7 +61,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -80,7 +78,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
                 <configuration>
                     <archive>
                         <manifest>
