--- a/extension-cdi-parent/pom.xml
+++ b/extension-cdi-parent/pom.xml
@@ -92,42 +92,40 @@
 
     <properties>
         <java.version>1.8</java.version>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <axon.version>4.4.5</axon.version>
 
-        <apache.deltaspike.version>1.9.4</apache.deltaspike.version>
-        <apache.commons.lang.version>3.11</apache.commons.lang.version>
         <apache.commons.io.version>1.3.2</apache.commons.io.version>
-
+        <apache.commons.lang.version>3.11</apache.commons.lang.version>
+        <apache.deltaspike.version>1.9.4</apache.deltaspike.version>
         <cdi-api.version>2.0</cdi-api.version>
-        <transaction.version>1.3</transaction.version>
-        <javaee-api.version>7.0</javaee-api.version>
-
-        <weld.version>3.0.5.Final</weld.version>
-        <weld-junit.version>1.3.1.Final</weld-junit.version>
-
-        <slf4j.version>1.7.30</slf4j.version>
-        <log4j.version>2.14.0</log4j.version>
-
-        <junit.version>4.13.1</junit.version>
-        <mockito.version>2.15.0</mockito.version>
-
+        <h2.version>1.4.200</h2.version>
+        <jackson.version>2.9.8</jackson.version>
         <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <javaee-api.version>7.0</javaee-api.version>
+        <junit.version>4.13.1</junit.version>
+        <log4j.version>2.14.0</log4j.version>
+        <lombok.version>1.18.16</lombok.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
+        <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
-        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-        <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
         <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+        <mockito.version>2.15.0</mockito.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <transaction.version>1.3</transaction.version>
+        <weld-junit.version>1.3.1.Final</weld-junit.version>
+        <weld.version>3.0.5.Final</weld.version>
+        <wildfly-swarm.version>2018.5.0</wildfly-swarm.version>
     </properties>
 
     <dependencyManagement>
@@ -212,6 +210,15 @@
             </dependency>
 
             <dependency>
+                <!-- The Wildfly Swarm BOM -->
+                <groupId>org.wildfly.swarm</groupId>
+                <artifactId>bom-all</artifactId>
+                <version>${wildfly-swarm.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+
+            <dependency>
                 <!-- The Apache DeltaSpike BOM -->
                 <groupId>org.apache.deltaspike.distribution</groupId>
                 <artifactId>distributions-bom</artifactId>
@@ -242,7 +249,19 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
-                <version>2.9.8</version>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
             </dependency>
 
         </dependencies>
