--- a/example/thorntail/pom.xml
+++ b/example/thorntail/pom.xml
@@ -22,6 +22,7 @@
       <plugin>
         <groupId>io.thorntail</groupId>
         <artifactId>thorntail-maven-plugin</artifactId>
+        <version>2.7.0.Final</version>
         <executions>
           <execution>
             <goals>
