--- a/example/pom.xml
+++ b/example/pom.xml
@@ -11,14 +11,16 @@
         <relativePath>../extension-cdi-parent</relativePath>
     </parent>
 
+    <groupId>org.axonframework.extensions.cdi.examples</groupId>
     <artifactId>axon-cdi-examples</artifactId>
     <packaging>pom</packaging>
 
-    <name>Axon Framework :: CDI Extension :: Examples</name>
+    <name>Axon CDI Extension Examples</name>
 
     <modules>
         <module>javaee</module>
         <module>javase</module>
         <module>thorntail</module>
+        <module>microprofile-liberty</module>
     </modules>
 </project>
