--- a/extension-cdi-parent/pom.xml
+++ b/extension-cdi-parent/pom.xml
@@ -99,7 +99,7 @@
         <apache.commons.io.version>2.8.0</apache.commons.io.version>
         <apache.commons.lang.version>3.11</apache.commons.lang.version>
         <apache.deltaspike.version>1.9.4</apache.deltaspike.version>
-        <cdi-api.version>2.0</cdi-api.version>
+        <cdi-api.version>3.0.0</cdi-api.version>
         <h2.version>1.4.200</h2.version>
         <jackson.version>2.9.8</jackson.version>
         <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
@@ -149,10 +149,12 @@
 
             <dependency>
                 <!-- The CDI API spec -->
-                <groupId>javax.enterprise</groupId>
-                <artifactId>cdi-api</artifactId>
+                <groupId>jakarta.enterprise</groupId>
+                <artifactId>jakarta.enterprise.cdi-api</artifactId>
                 <version>${cdi-api.version}</version>
+                <scope>provided</scope>
             </dependency>
+
 
             <dependency>
                 <groupId>javax.transaction</groupId>
