--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -98,24 +98,20 @@
             <!-- Axon Framework test fixtures -->
             <groupId>org.axonframework</groupId>
             <artifactId>axon-test</artifactId>
-
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-junit4</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
+            <!-- JUnit 5 API -->
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <!-- JUnit 5 engine -->
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -131,6 +127,126 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.arquillian.junit5</groupId>
+            <artifactId>arquillian-junit5-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>test-weld</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.arquillian.container</groupId>
+                    <artifactId>arquillian-weld-embedded</artifactId>
+                    <version>3.0.0.Alpha1</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.weld.se</groupId>
+                    <artifactId>weld-se-core</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-all</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>wildfly</id>
+<!--            <dependencies>-->
+<!--                <dependency>-->
+<!--                    <groupId>org.wildfly</groupId>-->
+<!--                    <artifactId>wildfly-arquillian-container-embedded</artifactId>-->
+<!--                    <version>8.1.0.Final</version>-->
+<!--                </dependency>-->
+<!--                <dependency>-->
+<!--                    <groupId>org.wildfly</groupId>-->
+<!--                    <artifactId>wildfly-embedded</artifactId>-->
+<!--                    <version>8.1.0.Final</version>-->
+<!--                </dependency>-->
+<!--            </dependencies>-->
+<!--            <build>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                        <configuration>-->
+<!--                            <argLine>-verbose:class</argLine>-->
+<!--                            <forkMode>once</forkMode>-->
+<!--                            <systemPropertyVariables>-->
+<!--                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>-->
+<!--                                <jboss.home>${project.basedir}/target/wildfly-8.1.0.Final</jboss.home>-->
+<!--                                <module.path>${project.basedir}/target/wildfly-8.1.0.Final/modules</module.path>-->
+<!--                                <arquillian.launch>wildfly-arquillian-container-embedded</arquillian.launch>-->
+<!--                            </systemPropertyVariables>-->
+<!--                            <redirectTestOutputToFile>false</redirectTestOutputToFile>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+        </profile>
+        <profile>
+            <id>payara</id>
+<!--            <dependencies>-->
+<!--                <dependency>-->
+<!--                    <groupId>org.jboss.arquillian.container</groupId>-->
+<!--                    <artifactId>arquillian-glassfish-embedded-3.1</artifactId>-->
+<!--                    <version>1.0.0.Final</version>-->
+<!--                    <scope>test</scope>-->
+<!--                </dependency>-->
+<!--                <dependency>-->
+<!--                    <groupId>fish.payara.extras</groupId>-->
+<!--                    <artifactId>payara-embedded-all</artifactId>-->
+<!--                    <version>5.2020.7</version>-->
+<!--                    <scope>test</scope>-->
+<!--                </dependency>-->
+<!--            </dependencies>-->
+        </profile>
+        <profile>
+            <id>glassfish</id>
+<!--            <properties>-->
+<!--                <glassfish.version>5.1.0</glassfish.version>-->
+<!--                <arquillian-glassfish.version>1.0.2</arquillian-glassfish.version>-->
+<!--            </properties>-->
+<!--            <dependencies>-->
+<!--                <dependency>-->
+<!--                    <groupId>org.glassfish.main.featuresets</groupId>-->
+<!--                    <artifactId>glassfish</artifactId>-->
+<!--                    <version>6.0.0</version>-->
+<!--                    <type>pom</type>-->
+<!--                </dependency>-->
+<!--                <dependency>-->
+<!--                    <groupId>org.jboss.arquillian.container</groupId>-->
+<!--                    <artifactId>arquillian-glassfish-managed-6</artifactId>-->
+<!--                    <version>1.0.0.Alpha1</version>-->
+<!--                    <scope>test</scope>-->
+<!--                </dependency>-->
+<!--            </dependencies>-->
+<!--            <build>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                        <configuration>-->
+<!--                            <argLine>-verbose:class</argLine>-->
+<!--                            <forkMode>once</forkMode>-->
+<!--                            <systemPropertyVariables>-->
+<!--                                <glassFishHome>${project.basedir}/target/glassfish-6</glassFishHome>-->
+<!--                            </systemPropertyVariables>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+        </profile>
+
+    </profiles>
 
 </project>
