--- a/example/thorntail/pom.xml
+++ b/example/thorntail/pom.xml
@@ -37,12 +37,6 @@
 
   <dependencies>
 
-    <dependency>
-      <!-- Java EE 7 dependency -->
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
 
     <dependency>
       <!-- Axon Framework -->
@@ -54,6 +48,13 @@
       <!-- Axon CDI -->
       <groupId>org.axonframework.extensions.cdi</groupId>
       <artifactId>axon-cdi</artifactId>
+    </dependency>
+
+    <dependency>
+      <!-- Jakarta EE -->
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-api</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
