axon-cdi V2  - clean start

--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -60,15 +60,15 @@
         </dependency>
 
         <dependency>
+            <!-- send java.util.logging to SLF4J -->
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j18-impl</artifactId>
-            <scope>test</scope>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
 
         <dependency>
