--- a/extension-cdi-parent/pom.xml
+++ b/extension-cdi-parent/pom.xml
@@ -108,6 +108,7 @@
         <jakarta.version>9.0.0</jakarta.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
         <log4j.version>2.14.0</log4j.version>
+        <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.16</lombok.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
         <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
@@ -233,6 +234,14 @@
                 <artifactId>slf4j-simple</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
+
+            <dependency>
+                <!-- Logback -->
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
 
 
             <dependency>
