Alternative modules (`javax` instead of `jakarta`)

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,9 @@
     <modules>
         <module>cdi</module>
         <module>axon-cdi-ext-jakarta</module>
+        <module>axon-cdi-ext-javax</module>
         <module>axon-cdi-jakarta</module>
+        <module>axon-cdi-javax</module>
         <module>example</module>
         <module>extension-cdi-parent</module>
     </modules>
