--- a/extension-cdi-parent/pom.xml
+++ b/extension-cdi-parent/pom.xml
@@ -106,6 +106,8 @@
         <jackson.version>2.9.8</jackson.version>
         <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
         <jakarta.version>9.0.0</jakarta.version>
+        <javax-cdi.version>2.0.SP1</javax-cdi.version>
+        <javax-jta.version>1.3</javax-jta.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
         <log4j.version>2.14.0</log4j.version>
         <logback.version>1.2.3</logback.version>
@@ -144,9 +146,37 @@
             </dependency>
 
             <dependency>
-                <!-- This extension (to override the version from Axon BOM) -->
+                <!-- This extension original (to override the version from Axon BOM) -->
                 <groupId>org.axonframework.extensions.cdi</groupId>
                 <artifactId>axon-cdi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <!-- This extension (jakarta with CDI portable extensions) -->
+                <groupId>org.axonframework.extensions.cdi</groupId>
+                <artifactId>axon-cdi-ext-jakarta</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <!-- This extension (jakarta without CDI portable extensions) -->
+                <groupId>org.axonframework.extensions.cdi</groupId>
+                <artifactId>axon-cdi-jakarta</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <!-- This extension (javax with CDI portable extensions) -->
+                <groupId>org.axonframework.extensions.cdi</groupId>
+                <artifactId>axon-cdi-ext-javax</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <!-- This extension (javax without CDI portable extensions) -->
+                <groupId>org.axonframework.extensions.cdi</groupId>
+                <artifactId>axon-cdi-javax</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -165,6 +195,21 @@
                 <artifactId>jakarta.jakartaee-api</artifactId>
                 <version>${jakarta.version}</version>
             </dependency>
+
+            <dependency>
+                <!-- CDI API (javax package)-->
+                <groupId>javax.enterprise</groupId>
+                <artifactId>cdi-api</artifactId>
+                <version>${javax-cdi.version}</version>
+            </dependency>
+
+            <dependency>
+                <!-- JTA API (javax package)-->
+                <groupId>javax.transaction</groupId>
+                <artifactId>javax.transaction-api</artifactId>
+                <version>${javax-jta.version}</version>
+            </dependency>
+
 
             <dependency>
                 <!-- The Arquillian BOM -->
