Update packages in examples to reflect common

--- a/example/microprofile-quarkus/src/main/resources/application.properties
+++ b/example/microprofile-quarkus/src/main/resources/application.properties
@@ -3,5 +3,10 @@ value=lookup value
 
 quarkus.ssl.native=true
 
-#quarkus.index-dependency.<name>.group-id=org.axonframework.extensions.cdi
-#quarkus.index-dependency.<name>.artifact-id=axon-cdi-javax
+quarkus.log.level=DEBUG
+
+quarkus.index-dependency.axon-cdi-common.group-id=org.axonframework.extensions.cdi
+quarkus.index-dependency.axon-cdi-common.artifact-id=axon-cdi-common
+
+quarkus.index-dependency.axon-cdi-javax.group-id=org.axonframework.extensions.cdi
+quarkus.index-dependency.axon-cdi-javax.artifact-id=axon-cdi-javax
